# orderbook_collection

./: Cargo.toml  README.md
benchmark/criterion/load_benchmark/array_load/base/: benchmark.json  estimates.json  sample.json  tukey.json
benchmark/criterion/load_benchmark/array_load/report/: index.html
benchmark/criterion/load_benchmark/btree_load/base/: benchmark.json  estimates.json  tukey.json
benchmark/criterion/load_benchmark/btree_load/new/: sample.json
benchmark/criterion/load_benchmark/btree_load/report/: index.html
benchmark/criterion/load_benchmark/report/: index.html
benchmark/criterion/read_levels_benchmark/array_read_levels/base/: estimates.json  sample.json  tukey.json
benchmark/criterion/read_levels_benchmark/array_read_levels/new/: benchmark.json
benchmark/criterion/read_levels_benchmark/array_read_levels/report/: index.html
benchmark/criterion/read_levels_benchmark/report/: index.html
benchmark/criterion/read_u64_benchmark/report/: index.html
benchmark/criterion/report/: index.html
orderbook_collection/: Cargo.toml
orderbook_collection/config/: test.yaml
orderbook_collection/src/: benchmark.rs  btree_orderbook.rs  config.rs  lib.rs  logger.rs  main.rs  ser.rs
orderbook_collection/src/array_orderbook/: orderbook.rs  ser.rs
orderbook_collection/src/array_orderbook/ser/: common.rs  incremental.rs  snapshot.rs
orderbook_collection/src/btree_orderbook/: orderbook.rs  ser.rs
orderbook_collection/src/btree_orderbook/ser/: common.rs  incremental.rs  snapshot.rs
orderbook_collection/tests/: e2e.rs
(+15 files in other folders)
